[package]
name = "actix-raw"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = { version="0.9.0" }
actix-codec = "0.2.0"
actix-http = { version="2.0.0", default-features = false }
#actix-http = "2.0.0"
actix-rt = "1.1.1"
actix-server = "1.0.3"
actix-service = "1.0.5"
num_cpus = "1.0"
bytes = "0.5.3"
snmalloc-rs = "0.2.6"
tokio-util = { version = "0.3", features = ["codec"] }
