[package]
name = "actix-raw"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.12"
actix-web = { version = "4.0.1", default-features = false, features = ["macros"] }
actix-http = { version = "3.0.4", default-features = false }
actix-rt = "2"
actix-codec = "0.4"
actix-server = "2"
actix-service = "2"

bytes = "1"
futures = "0.3.7"
http = "0.2"
num_cpus = "1.0"
snmalloc-rs = "0.2.6"
url = "2.1.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
